# api/models/src/commonMain/kotlin/xyz/hyli/timeflow/api/models/Routes.kt
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2025 Lyxot and contributors.
+ * Copyright (c) 2025-2026 Lyxot and contributors.
  *
  * 此源代码的使用受 GNU AFFERO GENERAL PUBLIC LICENSE version 3 许可证的约束, 可以在以下链接找到该许可证。
  * Use of this source code is governed by the GNU AGPLv3 license, which can be found at the following link.
@@ -11,6 +11,20 @@ package xyz.hyli.timeflow.api.models
 
 import io.ktor.resources.*
 import kotlinx.serialization.Serializable
+
+@Serializable
+@Resource("/ping")
+class Ping {
+    @Serializable
+    data class Response(val status: String = "ok")
+}
+
+@Serializable
+@Resource("/version")
+class Version {
+    @Serializable
+    data class Response(val version: String, val buildTime: Long, val commitHash: String)
+}
 
 @Serializable
 @Resource("/api/v1")
